[package]
name = "coinmarketcap"
version = "0.1.0"
authors = ["Zoran Zaric <zz@zoranzaric.de>"]
description = "A small unofficial wrapper for the coinmarketcap.com API"

license = "MIT/Apache-2.0"
repository = "https://github.com/zoranzaric/coinmarketcap.rs"
readme = "README.md"

[dependencies]
reqwest = "0.8.1"
serde = "1.0.19"
serde_derive = "1.0.19"
serde_json = "1.0"
