[package]
name = "coinmarketcap"
version = "0.3.0"
authors = ["Zoran Zaric <zz@zoranzaric.de>"]
description = "A small unofficial wrapper for the coinmarketcap.com API"

readme = "README.md"
license = "MIT/Apache-2.0"
homepage = "https://github.com/zoranzaric/coinmarketcap.rs"
repository = "https://github.com/zoranzaric/coinmarketcap.rs.git"

[dependencies]
reqwest = "0.8.1"
serde = "1.0.19"
serde_derive = "1.0.19"
serde_json = "1.0"
